# dsm

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  cargo-deny.toml  codecov.yml  deny.toml  dsm_spec.txt  package.json  pnpm-workspace.yaml  wip_dump.txt
.agents/skills/ai-dev-repo-expert/: SKILL.md
.agents/skills/arch-overview/: SKILL.md
.agents/skills/bilateral-debug/: SKILL.md
.agents/skills/ble-test/: SKILL.md
.agents/skills/cargo-check/: SKILL.md
.agents/skills/cross-layer-trace/: SKILL.md
.agents/skills/crypto-guide/: SKILL.md
.agents/skills/device-status/: SKILL.md
.agents/skills/dlv-guide/: SKILL.md
.agents/skills/dsm-auto/: SKILL.md
.agents/skills/emissions-guide/: SKILL.md
.agents/skills/full-ci/: SKILL.md
.agents/skills/invariant-check/: SKILL.md
.agents/skills/mainnet-checklist/: SKILL.md
.agents/skills/ndk-build/: SKILL.md
.agents/skills/nfc-backup/: SKILL.md
.agents/skills/proto-regen/: SKILL.md
.agents/skills/spec-lookup/: SKILL.md
.agents/skills/storage-cluster/: SKILL.md
.agents/skills/storage-guide/: SKILL.md
.agents/skills/verify-symbols/: SKILL.md
.agents/skills/wire-format/: SKILL.md
.cargo/: config.toml
.githooks/: pre-push
.github/: CODEOWNERS  ISSUES.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: architecture-refactor.yml  bug-report-beta.yml  config.yml  developer-onboarding-beta.yml  feature-request-beta.yml  general-feedback-beta.yml
.github/instructions/: cdbrw.instructions.md  dBTCimplement.instructions.md  proto.instructions.md  statelessness.instructions.md  storagenodes.instructions.md  whitepaper.instructions.md
.github/workflows/: ci.yml  nightly-security-audit.yml  sbom.yml  security.yml  stale.yml
.github/workflows/archive/: android-ci-cd.yml  bilateral-transactions-e2e.yml  frontend-ci-cd.yml  genesis-identity-e2e.yml  main-ci-cd.yml  no-json-clock-check.yml  rust-ci-cd.yml  state-machine-evolution-e2e.yml  token-creation-management-e2e.yml  unilateral-transactions-e2e.yml
ci/: block_bluetooth_mods.sh  bridge_contracts_gate.sh  canonical_bilateral_gates.sh  no_clock_and_no_json.sh
ci/docker/: StorageNode.Dockerfile
crates/dsm-cli/: Cargo.toml
crates/dsm-cli/src/: main.rs
crates/dsm-consensus/: Cargo.toml
crates/dsm-consensus/src/: lib.rs
crates/dsm-core/: Cargo.toml
crates/dsm-core/src/: lib.rs
crates/dsm-crypto/: Cargo.toml
crates/dsm-crypto/src/: lib.rs
crates/dsm-network/: Cargo.toml
crates/dsm-network/src/: lib.rs
crates/dsm-storage/: Cargo.toml
crates/dsm-storage/src/: lib.rs
docs/: sofi-lp-walkthrough.md  sofi-two-device-playbook.md
docs/book/: 02-quickstart.md  03-development-setup.md  05-protocol-reference.md  07-storage-nodes.md  08-bitcoin-dbtc.md  10-testing-and-ci.md  11-integration-guide.md  12-command-reference.md  13-troubleshooting.md  14-contributing.md  15-security-model.md  appendix-a-glossary.md  appendix-c-spec-index.md
docs/plans/: 2026-03-19-detfi-compile-and-launch-design.md  2026-04-10-rust-authoritative-securing-phase.md  2026-04-21-bilateral-hardening-design.md
docs/reports/: 2026-04-28-formal-verification-report.md
dsm-gen/: Cargo.toml
dsm-gen/src/: base32.rs  compiler.rs  lib.rs  main.rs  schema.rs
dsm-gen/src/generators/: kotlin.rs  mod.rs  rust_gen.rs  swift.rs  typescript.rs
dsm-gen/tests/: detfi_compile.rs  detfi_examples.rs  enhanced_policy_test.rs
dsm_client/android/app/: build.gradle.kts
dsm_client/android/app/src/main/cpp/: CMakeLists.txt
dsm_client/deterministic_state_machine/: Cargo.toml  dsm_client_config.json  storage_node_config.toml
dsm_client/deterministic_state_machine/dsm/: Cargo.toml  build.rs  dsm-dsm_sdk-beta-release-2026-03-29.json  (+4 more)
dsm_client/frontend/: package-lock.json  package.json
dsm_client/frontend/public/: index.html
dsm_client/new_frontend/: jest.config.json  package-lock.json  package.json
dsm_client/scripts/: android_device_test.sh  auto-bridge-complete.sh  build-proto.sh  check-bridge-drift.sh  test-bridge-autogeneration.sh
dsm_storage_node/: Cargo.toml  Dockerfile.cloud  README.md  config-dev-node1.toml  config-dev-node2.toml  config-dev-node3.toml  config-dev-node4.toml  config-dev-node5.toml  dsm-dsm_vector_builder-beta-release-2026-03-29.json  dsm-dsm_vector_runner-beta-release-2026-03-29.json  dsm-dsm_vertical_validation-beta-release-2026-03-29.json  start_dev_nodes.sh
dsm_storage_node/config/: production.toml
dsm_storage_node/deploy/: generate_node_configs.sh
dsm_storage_node/scripts/: start_dev_nodes.sh
dsm_storage_node/src/: chaos_testing.rs  lib.rs  main.rs  operational.rs  replication.rs
dsm_storage_node/tests/: bytecommit_chain.rs  object_store.rs
lean4/: DSMCertChain.lean
proto/: dsm_app.proto
reports/: DSM-SBOM-beta-release-2026-03-29.md  DSM-SBOM-beta3-20260421.md  DSM-SBOM-beta3-20260422.md
scripts/: aggregate_coverage.mjs  ci_scan.sh  codegen_enforce.sh  dev.ps1  dev_nodes_reset.sh  dsm_env_config.gcp.toml  enforce-guardrails.sh  fast_deploy_android.sh  fast_deploy_android_release.sh  flow_assertions.sh  flow_mappings.manifest  generate-sbom.sh  install-hooks.sh  proto_gen_all.sh  push_env_override.sh  qr_precommit_guard.sh  rebind_recipient_device.sh  setup_dev_db.sh  ts_vector_flake_guard.sh  verify_16kb_support.sh
tla/: DSM.tla  DSM_NonInterference.tla  DSM_OfflineFinality.tla  DSM_Tripwire.tla
tools/vector_builder/: Cargo.toml  dsm-dsm_storage_node-beta-release-2026-03-29.json  dsm-dsm_vector_runner-beta-release-2026-03-29.json  dsm-dsm_vertical_validation-beta-release-2026-03-29.json
tools/vector_runner/: Cargo.toml  dsm-dsm_storage_node-beta-release-2026-03-29.json  dsm-dsm_vector_builder-beta-release-2026-03-29.json  dsm-dsm_vertical_validation-beta-release-2026-03-29.json
tools/vertical_validation/: Cargo.toml  dsm-dsm_storage_node-beta-release-2026-03-29.json  dsm-dsm_vector_builder-beta-release-2026-03-29.json  dsm-dsm_vector_runner-beta-release-2026-03-29.json
verification-reports/: dbtc-tap-keg-audit-20260316.md
(+449 files in other folders)
