[package]
name = "dsm-cli"
description = "Command-line interface for the DSM decentralized state machine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
dsm-core.workspace = true
dsm-crypto.workspace = true
dsm-network.workspace = true
dsm-storage.workspace = true
dsm-consensus.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true

[lints]
workspace = true
