[package]
name = "dsm-core"
description = "Core state machine logic, transitions, and validation for DSM"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
dsm-crypto.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
