[package]
name = "dsm-crypto"
description = "Cryptographic primitives for the DSM decentralized state machine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ed25519-dalek.workspace = true
x25519-dalek.workspace = true
sha2.workspace = true
rand.workspace = true
serde.workspace = true
thiserror.workspace = true

[lints]
workspace = true
