[package]
name = "dsm-network"
description = "P2P networking layer for the DSM decentralized state machine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
dsm-core.workspace = true
dsm-crypto.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
