[package]
name = "dsm-storage"
description = "Persistence and state storage for the DSM decentralized state machine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
dsm-core.workspace = true
dsm-crypto.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
